# osclassifier

./: .gitignore  CMakeLists.txt  README.md  main.cpp  osmm2cm.qml  splitdata.sh
